Predictive_Model_for_Heart_Disease_ (1).ipynb

--- a/Predictive_Model_for_Heart_Disease_ (1).ipynb
+++ b/Predictive_Model_for_Heart_Disease_ (1).ipynb
@@ -19,7 +19,7 @@
       "source": [
         "**Prediction of Heart Disease Using Machine Learning**\n",
         "\n",
-        "In this project, we will use the UCI Heart disease dataset and build a K-Nearest Neighbors classifier to accurately predict the likelihood of a patient having a heart disease in the future.\n",
+        "The UCI Heart disease dataset is used to develop a K-Nearest Neighbors classifier to predict the likelihood of a patient having a heart disease.\n",
         "\n",
         "\n",
         "\n",
